[package]
name = "competitive"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.2.1"
num-derive = "0.3.0"
rand = { version = "0.7.3", features = ["small_rng"] }
regex = "1.3.6"
lazy_static = "1.4.0"
ordered-float = "1.0.2"
permutohedron = "0.2.4"
itertools = "0.9.0"
itertools-num = "0.1.3"
either = "1.5.3"
